# dynamic-queue-adaptation

./: DECISIONS.md  LICENSE  MASTER_PLAN.md  PROJECT_RULES.md  README.md  SPEC.md  TASKS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
content/: linkedin_post.md  medium_article.md  optional_release_notes.md  outreach_note.md  product_feedback.md
data/processed/: processed_track_catalog.csv
data/synthetic/: synthetic_sessions.csv
notebooks/: exploration.ipynb
reports/: results_summary.csv  whitepaper.md
src/data/: build_sessions.py  load_data.py  preprocess.py
src/evaluation/: compare_models.py  metrics.py  plots.py
src/models/: adaptive_reranker.py  baseline_seed.py  scoring.py
src/simulation/: intent_update.py  queue_state.py
tests/: test_adaptive_reranker.py  test_baseline_seed.py  test_build_sessions.py  test_intent_update.py  test_load_data.py  test_metrics.py  test_plots.py  test_scoring.py
