[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-queue-adaptation"
version = "0.1.0"
description = "Offline prototype for intent-aware queue adaptation in music recommendation systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
